# encore-addons

./: .gitignore  Android.mk  CMakeLists.txt  LICENSE  README.md  build.sh
include/: anti_tamper.h  bypass_charging.h  common.h  crypto_utils.h  device_probe.h  file_io.h  file_watcher.h  license_manager.h  logging.h  safety_monitor.h
module/: checksums.sha256  customize.sh  gamelist.txt  module.prop  service.sh  verify.sh
server/: README.md  license_server.js  license_server.py  package.json
server/legacy/: license_server.py
server/templates/: index.html  login.html
src/: anti_tamper.c  bypass_charging.c  crypto_utils.c  device_probe.c  file_io.c  file_watcher.c  license_manager.c  logging.c  main.c  safety_monitor.c
